tests/baselines/reference/destructuringTypeAssertionsES5_4.errors.txt
tests/cases/conformance/es6/destructuring/destructuringTypeAssertionsES5_4.ts(1,23): error TS2304: Cannot find name 'foo'.


==== tests/cases/conformance/es6/destructuring/destructuringTypeAssertionsES5_4.ts (1 errors) ====
    var { x } = <any><any>foo();
                          ~~~
!!! error TS2304: Cannot find name 'foo'.